# oop_lab_six

./: CMakeLists.txt  README.md  main.cpp  tests.cpp
objects/dragon/: dragon.hpp
objects/knight/: knight.hpp
objects/npc/: npc.hpp
objects/princess/: princess.hpp
